# LeoBotRoboCup

./: .gitignore  .gitmodules  .rosinstall  .rosinstall.bak  LICENSE  README.md  atwork_commander_msgs.msg
bringup_leobot/: .gitignore  CMakeLists.txt  README.md  package.xml
bringup_leobot/config/: rviz_gui.rviz
bringup_leobot/launch/: bringup_all.launch  bringup_base.launch  bringup_cameras.launch  bringup_franka.launch  bringup_gmapping.launch  bringup_gui.launch  bringup_leobot.launch  bringup_navigationstack.launch  bringup_sick.launch  bringup_sim.launch  bringup_slam_hector.launch  bringup_teleop_keyboard.launch  bringup_vicon.launch  shutdown_franka.launch
bringup_leobot/scripts/: lock_franka.py  shutdown_franka.py
commandtree_robocup/: CMakeLists.txt  README.md  commandtree_statediagram.drawio  package.xml
commandtree_robocup/launch/: commandtree_robocup.launch
commandtree_robocup/scripts/: TEST_move.py  arena_info.py  move.py  move_arm.py  service_area.py  test_arena.py  test_arena_movement.py  utils.py  utils_arena.py  utils_err.py  utils_move.py  virtual_obstacles.py
epos_ethercat/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  package.xml
epos_ethercat/Data/: maxon_motor_EPOS4_0160h_6552h_0000h_0000h_ESI.xml
epos_ethercat/config/: Model_Kinematics_O.eps  config_rqtmultiplot_base.xml  config_rqtmultiplot_statusword.xml  config_rqtmultiplot_wheels.xml  leobot_base.yaml  leobot_base_sketch_no_text.eps  note.txt  rqt_multiplot_Monitoring_TempVolt.xml
epos_ethercat/launch/: EPOS4.launch  Slaveinfo.launch  joyNode.launch  joy_EPOS4.launch  joy_leobot_base.launch  leobot_base.launch  test_EPOS4.launch  test_leobot_base.launch
epos_ethercat/src/: EPOS4_class.cpp  EPOS4_class.h  Eth_BaseMovement.cpp  Eth_EPOS4_main.cpp  Eth_PDOtest.cpp  Eth_Slaveinfo.cpp  Eth_red_test.cpp  Eth_simple_Test.cpp  Eth_tutorial.cpp  circular_buffer.h  joy_publisher.cpp  sine_publisher.cpp  test_MotorInfo_class.cpp  test_ros.cpp
franka_modules/: CMakeLists.txt  README.md  package.xml  setup.py
franka_movement/: CMakeLists.txt  README.md  package.xml
franka_movement/apps/: BagPublisherMaintainTime.cpp  CMakeLists.txt  FrankaNode.cpp  PlaningSceneNode.cpp
franka_movement/include/franka_movement/: Arm.hpp  PlaningScene.hpp  PlanningSceneUtils.hpp
franka_movement/launch/: franka_node.launch  franka_pointcloud.launch  moveit_init.launch
franka_movement/scripts/: motion_examples.py  pick_place.py  pick_place_example.py  planning_scene_example.py
franka_movement/simulation/: franka.urdf
franka_movement/src/: CMakeLists.txt
franka_movement/src/Arm/: Arm.cpp  franka_move_joints.cpp  franka_move_to_named.cpp  franka_move_to_pose.cpp  hand.cpp
franka_movement/src/PlaningScene/: PlaningScene.cpp  PlanningSceneUtils.cpp  add_object.cpp
franka_ros/: README.md
franka_ros/franka_description/: README.md
franka_ros/franka_example_controllers/: CMakeLists.txt  README.md  franka_example_controllers_plugin.xml  package.xml
leobot_config/: CMakeLists.txt  README.md  package.xml
leobot_config/figures/: TF_tree.drawio
leobot_config/launch/: load_objects.launch
leobot_config/objects/: PANDALeobotTest.py  RoCKIn_objects.yaml  objectStack_rotations.txt  robot2objectStackPose.yaml  standard_objects.yaml
leobot_config/workstations/: helpfile4arenaParameter.py  specialPositions.yaml  world2wsPose.yaml  ws2cavitiesPose.yaml  ws2placePose.yaml  ws2robotPose.yaml
leobot_navigation/: CMakeLists.txt  README.md  package.xml
leobot_navigation/coppelia/: Arena_RoboCup21.ttt
leobot_navigation/launch/: amcl.launch
leobot_navigation/rviz/: gmapping_setup.rviz  navigation_sim.rviz
leobot_navigation/scripts/: allTFpublisher.py
leobot_safety/: CMakeLists.txt  package.xml
leobot_safety/launch/: leobot_modbus.launch  leobot_safety.launch  leobot_safety.rviz
leobot_safety/rviz_config/: config_rviz.rviz
leobot_safety/scripts/: leobot_safety_node.py
leobot_safety/sick-config/: leobot_cpu_backup.fsp  leobot_tim.sopas
leobot_safety/urdf/: RoboCup.urdf.xacro
meassurments/: CMakeLists.txt  README.md  package.xml
meassurments/data/: LeobotMeas_2021_03_30.txt  Rectangle_3Runs_2Velocities.txt  Rectangle_3Runs_3Velocities.txt  Rotation_3Runs_2Velocities.txt  Rotation_3Runs_3Velocities.txt  jointconfigurations.txt
meassurments/launch/: MeasurementMaster.launch  getImageServer.launch  meassurem_test.launch
meassurments/scripts/: CreateMasterInput.py  GetImageFrame_Server.py  MeasurmentMaster.py  MovementByRoboticsToolbox.py  frankaTrainingMove.py
meassurments/src/: Predef_VelPublisher.cpp  fake_torque_publisher.cpp  meassure_torque_ang.cpp  timedVelService.cpp  timed_vel_publisher.cpp
msg_lfui/: CMakeLists.txt  README.md  package.xml
msg_lfui/msg/: knownObj.msg  segObj.msg
panda_moveit_config/: .setup_assistant  README.md  package.xml
panda_moveit_config/config/: fake_controllers.yaml  hand.xacro  joint_limits.yaml  kinematics.yaml  panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  sensors_kinect_pointcloud.yaml
panda_moveit_config/launch/: demo.launch  move_group.launch  moveit.rviz  moveit_martin.rviz  moveit_rviz.launch  panda_moveit.launch  planning_context.launch  trajectory_execution.launch.xml
panda_test_move/: CMakeLists.txt  package.xml
panda_test_move/launch/: moveobject.launch
panda_test_move/script/: allPositions.py  pandaGripper.py  pandamovetest.py  pictueTest.py
qr_position/: CMakeLists.txt  package.xml
qr_position/launch/: pr2_indiv_my.launch
qr_position/scripts/: qr_position.py
robocup_msgs/: README.md
robocup_msgs/commandtree_msgs/: CMakeLists.txt  package.xml
robocup_msgs/franka_movement_msgs/: CMakeLists.txt  package.xml
robocup_msgs/leobot_base_msg/: CMakeLists.txt  (+1 more)
robocup_msgs/measurements_msgs/: CMakeLists.txt  package.xml
robocup_msgs/measurements_msgs/srv/: timedVel.srv
robocup_tape_detection/: CMakeLists.txt  README.md  package.xml
tyrolics_refbox/: CMakeLists.txt  README.md  package.xml
vicon_position/: CMakeLists.txt  package.xml
virtual_costmap_layer/: package.xml
(+157 files in other folders)
