<?xml version="1.0"?>
<package format="2">
  <name>franka_movement</name>
  <version>0.0.0</version>
  <description>The franka_movement package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="paddy-hofmann@web.de">paddy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <depend>std_srvs</depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>control_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <exec_depend>franka_movement_msgs</exec_depend>
  <build_depend>franka_movement_msgs</build_depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosbag</depend>
  <depend>moveit_commander</depend>
  <depend>trac-ik</depend>
  <depend>trac-ik-kinematics-plugin</depend>
  <depend>eigen_convertions</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>trac_ik</exec_depend>
  <exec_depend>realsense2</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
